# record

./: .gitignore  AGENTS.md  README.md
yail/: .gitignore  app.db  app.py  pymonitor.py  pyproject.toml  readme.md  requeriment.txt
yail/conf/: __init__.py  db.py  dev.py
yail/lib/: __init__.py  logger.py  yom.py  yom_sqlite.py
yail/lib/ocr/: __init__.py  base.py  minimax_engine.py  paddleocr_engine.py
yail/lib/yeab/: apis.py  config.py  cookie_storage.py  session.py  web.py  yeab.py
yail/test/: __init__.py
yail/test/lib/: __init__.py  test_aiomysql.py  test_logger.py  test_module_load.py  test_yom.py
yail/test/www/dao/: test_sqlite_dao.py  test_user.py
yail/tools/: detail_set_rec_day.py  migrate_mysql_to_sqlite.py  note_set_rec_day.py
yail/tools/migrate/: 1_user.py  2_note_risk.py  3_week_note.py  4_t_note_detail.py  5_t_car_info.py  6_t_car_pic.py  6_t_car_pics.py  7_chat_message.py  rake  rake_migrate.py
yail/tools/migrate_sqlite/: 1_user.py  2_note_risk.py  3_week_note.py  4_t_note_detail.py  5_t_car_info.py  6_car_history.py  6_t_car_pics.py  7_car_history_pics.py  7_chat_message.py  8_car_no_history_name.py  8_rename_tables.py  rake_sqlite_migrate.py
yail/utils/: date_util.py
yail/www/: __init__.py
yail/www/common/: __init__.py  message.py  vo.py
yail/www/dao/: __init__.py  base.py  car_history.py  car_info.py  car_pics.py  chat_message.py  field_desc.py  user.py  week_note.py
yail/www/filters/: filters.py
yail/www/handlers/: index.py  login.py  note.py  system.py
yail/www/handlers/admin/: user.py
yail/www/handlers/car/: index.py  (+1 more)
(+127 files in other folders)
