[project]
name = "yail"
version = "0.1.0"
description = "Backend API server"
requires-python = ">=3.10"
dependencies = [
    "watchdog",
    "aiohttp>=3.7.4",
    "aiomysql",
    "cryptography",
    "openai>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.pdm.scripts]
start = "python app.py"
migrate = "python tools/migrate/rake_migrate.py"