[project]
name = "yail"
version = "0.1.0"
description = "Backend API server"
requires-python = ">=3.10"
dependencies = [
    "watchdog",
    "aiohttp>=3.7.4",
    "aiomysql",
    "cryptography",
    "openai>=1.0.0",
    "aiosqlite>=0.19.0",
    "paddlepaddle>=3.3.1",
    "paddleocr>=3.4.1",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.pdm.scripts]
start = "python app.py"
migrate = "python tools/migrate/rake_migrate.py"
migrate_sqlite = "python tools/migrate_sqlite/rake_sqlite_migrate.py"
